PMforce/src/objects/TimeSheet__c.object
<CustomObject>
    <fields>
        <fullName>Billable1__c</fullName>
        <label>Billable1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>TimeSheets</relationshipLabel>
        <relationshipName>TimeSheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_Spent__c</fullName>
        <label>Hours Spent</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Allocation__c</fullName>
        <label>Allocation</label>
        <referenceTo>Allocation__c</referenceTo>
        <relationshipLabel>TimeSheets</relationshipLabel>
        <relationshipName>TimeSheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>TimeSheets</relationshipLabel>
        <relationshipName>TimeSheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Category__c</fullName>
        <label>Task Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Coding</fullName>
                </value>
                <value>
                    <fullName>Unit Testing</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>QA Tesing</fullName>
                </value>
                <value>
                    <fullName>UAT Support</fullName>
                </value>
                <value>
                    <fullName>Bug Fixing</fullName>
                </value>
                <value>
                    <fullName>Documentation-Proposal</fullName>
                </value>
                <value>
                    <fullName>Documentation-User Manual</fullName>
                </value>
                <value>
                    <fullName>Project Plan</fullName>
                </value>
                <value>
                    <fullName>User Training</fullName>
                </value>
                <value>
                    <fullName>Client Calls</fullName>
                </value>
                <value>
                    <fullName>Team Meetings</fullName>
                </value>
                <value>
                    <fullName>POC Creation</fullName>
                </value>
                <value>
                    <fullName>Case Creation</fullName>
                </value>
                <value>
                    <fullName>Self Learning</fullName>
                </value>
                <value>
                    <fullName>Knowledge Transfer (KT)</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Case Study Creation</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>User Manual</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Task Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>TimeSheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Allocation__c</columns>
        <columns>Date__c</columns>
        <columns>Hours_Spent__c</columns>
        <columns>Status__c</columns>
        <columns>Task_Description__c</columns>
        <columns>Project__c</columns>
        <columns>Change_Request__c</columns>
        <columns>Billable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TN-{00000}</displayFormat>
        <label>TimeSheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeSheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Hours_spent_not_more_than_12</fullName>
        <active>false</active>
        <errorConditionFormula>Hours_Spent__c &gt; 12</errorConditionFormula>
        <errorDisplayField>Hours_Spent__c</errorDisplayField>
        <errorMessage>Hours spent must be less than or equals to 12</errorMessage>
    </validationRules>
</CustomObject>